// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InterfaceHeader snapshot micro 1`] = `
<header
  class="text-xs font-medium text-dark-aa"
>
  Ideal next opportunity
</header>
`;

exports[`InterfaceHeader snapshot page 1`] = `
<header
  class="text-xl font-normal text-slate-800"
>
  General Settings
</header>
`;

exports[`InterfaceHeader snapshot panel 1`] = `
<header
  class="text-lg font-medium text-dark-aaa"
>
  Unbiased Sourcing
</header>
`;

exports[`InterfaceHeader snapshot section 1`] = `
<header
  class="text-md font-medium text-dark-aaa"
>
  Diversity
</header>
`;
